--- a/options.html
+++ b/options.html
@@ -4,8 +4,16 @@
   <title>Settings</title>
 </head>
 <body>
-  <label>Reminder Time:</label>
-  <input type="time" id="reminder-time">
+  <label>Distance (miles):</label>
+  <input type="number" id="distance" min="0.1" max="10" step="0.1">
+
+  <label>Price Level:</label>
+  <select id="price">
+    <option value="1,2">$ - $$</option>
+    <option value="2,3" selected>$$ - $$$</option>
+    <option value="3,4">$$$ - $$$$</option>
+  </select>
+
   <button id="save">Save</button>
   <script src="options.js"></script>
 </body>
