--- a/popup.html
+++ b/popup.html
@@ -7,10 +7,34 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="wheel-container">
-    <canvas id="wheel" width="300" height="300"></canvas>
-    <button id="spin">Spin</button>
+  <div id="popup-container">
+    <!-- 🌀 Main View (Wheel + Spin Button) -->
+    <div id="main-view">
+      <div id="wheel-container">
+        <canvas id="wheel" width="300" height="300"></canvas>
+        <button id="spin">Spin</button>
+      </div>
+      <button id="open-settings">Settings</button>
+    </div>
+
+    <!-- ⚙️ Settings View (Hidden by Default) -->
+    <div id="settings-view" style="display: none;">
+      <h3>Settings</h3>
+      <label>Distance (miles):</label>
+      <input type="number" id="distance" min="0.1" max="10" step="0.1">
+
+      <label>Price Level:</label>
+      <select id="price">
+        <option value="1,2">$ - $$</option>
+        <option value="2,3" selected>$$ - $$$</option>
+        <option value="3,4">$$$ - $$$$</option>
+      </select>
+
+      <button id="save-settings">Save</button>
+      <button id="close-settings">Back</button>
+    </div>
   </div>
+
   <script src="wheel.js"></script>
   <script src="popup.js"></script>
 </body>
