--- a/popup.html
+++ b/popup.html
@@ -7,8 +7,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <!-- 🏆 Personalized Greeting -->
+  <h2 id="greeting">Hello, Guest. Time for a healthy meal!</h2>
+
   <div id="popup-container">
-    <!-- 🌀 Main View (Wheel + Spin Button) -->
+    <!-- 🎡 Main View -->
     <div id="main-view">
       <div id="wheel-container">
         <canvas id="wheel" width="300" height="300"></canvas>
@@ -20,6 +24,10 @@
     <!-- ⚙️ Settings View (Hidden by Default) -->
     <div id="settings-view" style="display: none;">
       <h3>Settings</h3>
+
+      <label>Enter Your Name:</label>
+      <input type="text" id="user-name" placeholder="Your Name">
+
       <label>Distance (miles):</label>
       <input type="number" id="distance" min="0.1" max="10" step="0.1">
 
