--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
 
   <!-- 🏆 Personalized Greeting -->
   <div id="caption-box">
-  <h2 id="greeting">Hello, Guest. Time for a healthy meal!</h2>
+  <h2 id="greeting">Time for a healthy meal!</h2>
 </div>
   <div id="popup-container">
     <!-- 🎡 Main View -->
