--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,7 @@
     <!-- 🎡 Main View -->
     <div id="main-view">
       <div id="wheel-container">
+        <img id="loading-gif" src="assets/loading.gif" alt="Loading..." style="display: none;">
         <canvas id="wheel" width="300" height="300"></canvas>
         <button id="spin">Spin</button>
       </div>
