--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
 
   <!-- 🏆 Personalized Greeting -->
   <div id="caption-box">
-  <h2 id="greeting">Time for a healthy meal!</h2>
+  <h2 id="greeting">Time for a healthy meal 🥗!</h2>
 </div>
   <div id="popup-container">
     <!-- 🎡 Main View -->
@@ -30,29 +30,25 @@
       </button>   
     </div>
     
-    <!-- ⚙️ Settings View (Hidden by Default) -->
-    <div id="settings-view" style="display: none;">
-      <h3>Settings</h3>
-
-      <label>Enter Your Name:</label>
-      <input type="text" id="user-name" placeholder="Your Name">
-
-      <label>Distance (miles):</label>
-      <input type="number" id="distance" min="0.1" max="10" step="0.1">
-
-      <label>Price Level:</label>
+  <!-- Settings View -->
+  <div id="settings-view" class="view">
+    <div class="form-group">
+      <label for="distance">Distance (miles):</label>
+      <input type="number" id="distance" min="0.1" max="10" step="0.1" placeholder="e.g., 0.5">
+    </div>
+    <div class="form-group">
+      <label for="price">Price Level:</label>
       <select id="price">
         <option value="1,2">$ - $$</option>
         <option value="2,3" selected>$$ - $$$</option>
         <option value="3,4">$$$ - $$$$</option>
       </select>
-
-      <button id="save-settings">Save</button>
-      <button id="close-settings">Back</button>
     </div>
-
+    <button id="save-settings">Save</button>
+    <button id="close-settings">Back</button>
   </div>
-
+</div>
+    
   <script src="wheel.js"></script>
   <script src="popup.js"></script>
 </body>
