--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,7 @@
     <div id="main-view">
       <div id="wheel-container">
         <img id="loading-gif" src="assets/loading.gif" alt="Loading..." style="display: none;">
-        <canvas id="wheel" width="300" height="300"></canvas>
+        <canvas id="wheel" width="310" height="310"></canvas>
         <button id="spin">Spin</button>
       </div>
       <!-- 🏆 Selected Restaurant Result -->
@@ -36,11 +36,11 @@
   <!-- Settings View -->
   <div id="settings-view" class="view">
     <div class="form-group">
-      <label for="distance">Distance (miles):</label>
+      <label for="distance">Distance (miles) 🗺️</label>
       <input type="number" id="distance" min="0.1" max="10" step="0.1" placeholder="e.g., 0.5">
     </div>
     <div class="form-group">
-      <label for="price">Price Level:</label>
+      <label for="price">Price Level 💰</label>
       <select id="price">
         <option value="1,2">$ - $$</option>
         <option value="2,3" selected>$$ - $$$</option>
